# swing-pose

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
app/body_from_image/: CMakeLists.txt  main.cpp
app/swing-pose/: CMakeLists.txt  main.cpp
include/c4a/pose/: IBodyFromImage.h
src/pose/: BodyFromImage.cpp  BodyFromImage.h  CMakeLists.txt
test/body_from_image/: CMakeLists.txt
