cmake_minimum_required(VERSION 3.15.0)

project (pose)

# -----------------------------------------------------------------------------
# Build options
# -----------------------------------------------------------------------------
option(test "Build all tests." OFF)

# -----------------------------------------------------------------------------
# Common build setup
# -----------------------------------------------------------------------------
set(PROJECT_ROOT ${CMAKE_CURRENT_LIST_DIR})
list(APPEND CMAKE_MODULE_PATH
    ${CMAKE_CURRENT_LIST_DIR}/build/cmake
)
include(BuildCommon)

# -----------------------------------------------------------------------------
# Add libraries
# -----------------------------------------------------------------------------
add_c4a_library(pose)

# -----------------------------------------------------------------------------
# Add executables/tests
# -----------------------------------------------------------------------------
# TODO: work-in-progress
# add_subdirectory(test)