cmake_minimum_required(VERSION 3.15.0)

project (pose)

# -----------------------------------------------------------------------------
# Build options
# -----------------------------------------------------------------------------
option(test "Build all tests." OFF)

# -----------------------------------------------------------------------------
# Common build setup
# -----------------------------------------------------------------------------
set(PROJECT_ROOT ${CMAKE_CURRENT_LIST_DIR})
list(APPEND CMAKE_MODULE_PATH
    ${CMAKE_CURRENT_LIST_DIR}/build/cmake
)
include(BuildCommon)

# -----------------------------------------------------------------------------
# Link models
# -----------------------------------------------------------------------------
file(CREATE_LINK ${CONAN_OPENPOSE_ROOT}/models ${PROJECT_ROOT}/models SYMBOLIC)


# -----------------------------------------------------------------------------
# Add libraries
# -----------------------------------------------------------------------------
add_c4a_library(pose)

# -----------------------------------------------------------------------------
# Add executables/tests
# -----------------------------------------------------------------------------
add_subdirectory(test/body_from_image)